fix(cropper) fix SVG image cropper bug

--- a/views/assets/stylesheets/scss/app/_forms.scss
+++ b/views/assets/stylesheets/scss/app/_forms.scss
@@ -228,6 +228,20 @@ button.qor-fieldset__add,
     position: relative;
     display: block;
     margin-top: 8px;
+    &.is-svg {
+        .qor-file__list {
+            > ul {
+                > li {
+                    line-height: 150px;
+                    text-align: center;
+                    img {
+                        display: inline-block;
+                        max-width: 90%;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .qor-file__list {
